--- a/my-todo/src/App.css
+++ b/my-todo/src/App.css
@@ -53,14 +53,14 @@ input {
 input[type="text"] {
   border-radius: 0;
 }
-body {
+/*body {
   width: 100%;
   max-width: 68rem;
   margin: 0 auto;
   font: 1.6rem/1.25 Arial, sans-serif;
   background-color: #f5f5f5;
   color: #4d4d4d;
-}
+}*/
 @media screen and (min-width: 620px) {
   body {
     font-size: 1.9rem;
